--- a/index.html
+++ b/index.html
@@ -3,20 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reserva de Armário</title>
+    <title>Dashboard de Exercícios</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js"></script>
+    <script>
+        function abrirAba(aba) {
+            // Esconde todas as abas
+            document.querySelectorAll('.aba-conteudo').forEach(div => {
+                div.style.display = 'none';
+            });
+
+            // Exibe a aba selecionada
+            document.getElementById(aba).style.display = 'block';
+        }
+
+        function reservarArmario() {
+            let tipo = document.getElementById("tipoArmario").value;
+            document.getElementById("resultado").textContent = "Armário " + tipo + " reservado com sucesso!";
+        }
+    </script>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f5f5f5;
+            flex-direction: column;
+        }
+
+        .container {
+            width: 90%;
+            max-width: 400px;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        .tabs {
+            display: flex;
+            justify-content: space-around;
+            background: #6200ea;
+            padding: 10px;
+            border-radius: 8px 8px 0 0;
+        }
+
+        .tabs button {
+            background: none;
+            border: none;
+            color: white;
+            font-size: 14px;
+            cursor: pointer;
+            padding: 10px;
+        }
+
+        .tabs button:hover {
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 5px;
+        }
+
+        .aba-conteudo {
+            display: none;
+            padding: 20px;
+        }
+
+        /* Exibe a primeira aba por padrão */
+        #reserva {
+            display: block;
+        }
+    </style>
 </head>
 <body>
+
     <div class="container">
-        <h2>Reserva de Armário</h2>
-        <label for="tipoArmario">Selecione o tipo de armário:</label>
-        <select id="tipoArmario">
-            <option value="padrao">Padrão</option>
-            <option value="duplo">Duplo</option>
-        </select>
-        <button onclick="reservarArmario()">Reservar</button>
-        <p id="resultado"></p>
+        <!-- Aba de navegação -->
+        <div class="tabs">
+            <button onclick="abrirAba('reserva')">Reserva de Armário</button>
+            <button onclick="abrirAba('grid')">Grid e Responsividade</button>
+            <button onclick="abrirAba('exercicio3')">Exercício 3</button>
+        </div>
+
+        <!-- Conteúdo das abas -->
+        <div id="reserva" class="aba-conteudo">
+            <h2>Reserva de Armário</h2>
+            <label for="tipoArmario">Selecione o tipo de armário:</label>
+            <select id="tipoArmario">
+                <option value="padrao">Padrão</option>
+                <option value="duplo">Duplo</option>
+            </select>
+            <button onclick="reservarArmario()">Reservar</button>
+            <p id="resultado"></p>
+        </div>
+
+        <div id="grid" class="aba-conteudo">
+            <h2>Grid e Responsividade</h2>
+            <p>Conteúdo sobre Grid e Responsividade aqui.</p>
+        </div>
+
+        <div id="exercicio3" class="aba-conteudo">
+            <h2>Exercício 3</h2>
+            <p>Conteúdo do exercício 3 aqui.</p>
+        </div>
     </div>
+
 </body>
 </html>
