--- a/index.html
+++ b/index.html
@@ -1,48 +1,36 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Inatel</title>
-    
-    <!-- Importando a fonte do Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&display=swap" rel="stylesheet">
-
-    <!-- Ícones do Google Fonts -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
-
-    <!-- Importando o CSS -->
+    <title>Dashboard - Inatel</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
 </head>
 <body>
 
-    <!-- Cabeçalho -->
     <header>
-        <div class="logo">
-            <svg class="svg_logo_inatel" xmlns="http://www.w3.org/2000/svg" viewBox="100 150 390 116">
-                <path class="path_logo" d="M127.455,156.988h21.287l-21.859,102.835H105.69L127.455,156.988L127.455,156.988z ..."></path>
-            </svg>
-        </div>
-        <button id="btn-theme" class="btn-theme">
-            <span class="material-icons-outlined">palette</span>
-        </button>
+        Dashboard - Inatel
     </header>
 
-    <!-- Menu de temas oculto -->
-    <div id="theme-menu" class="theme-menu">
-        <p>Escolha um tema:</p>
-        <button class="theme-button" data-theme="inatel">Inatel</button>
-        <button class="theme-button" data-theme="dark">Dark</button>
-        <button class="theme-button" data-theme="light">Light</button>
-    </div>
-
-    <!-- Conteúdo -->
     <main>
-        <h1>Bem-vindo ao Dashboard Inatel</h1>
-        <p>Personalize seu tema e salve suas preferências!</p>
+        <p>Bem-vindo ao Dashboard do Inatel! Escolha seu tema favorito.</p>
     </main>
 
-    <!-- Importando o JavaScript -->
+    <!-- Botão para abrir o menu de temas -->
+    <button id="btn-theme">
+        <span class="material-icons-outlined">palette</span>
+    </button>
+
+    <!-- Menu de seleção de temas -->
+    <div id="theme-menu" class="theme-menu">
+        <button onclick="mudarTema('inatel')">Inatel</button>
+        <button onclick="mudarTema('dark')">Dark</button>
+        <button onclick="mudarTema('light')">Light</button>
+    </div>
+
     <script src="script.js"></script>
+
 </body>
 </html>
